<resources>
    <string name="app_name">QuickAttend</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="title_currentclass">Current Class</string>
    <string name="title_nextclass">Next Class</string>
    <string name="title_statistics">Stats</string>
    <string name="statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_preference">quickattend_shared</string>
</resources>
