<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!--<item-->
        <!--android:id="@+id/navigation_statistics"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_statistics" />-->
    <item
        android:id="@+id/navigation_classes"
        android:icon="?android:attr/actionModePasteDrawable"

        android:title="@string/title_classes" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/title_settings" />

</menu>
